@startuml class
!theme amiga
abstract class ProgramBase {
    + {abstract} start(args: str[])
}

class Program {
    - __argument_processor: ArgumentProcessorBase
}

abstract class ArgumentValidatorBase {
    + {abstract} validate(args: str[]): bool
}

class ArgumentValidator {
}

abstract class ArgumentProcessorBase {
    + {abstract} process(args: str[])
}

class ArgumentProcessor {
    - __argument_validator: ArgumentValidatorBase
    - __password_generator: PasswordGeneratorBase
    - __terminal: TerminalBase
}

abstract class TerminalBase {
    + {abstract} show(message: str)
}

class Terminal {
}

abstract class PasswordGeneratorBase {
    + {abstract} generate(): str
}

class PasswordGenerator {
    - __password_length: int
    - __random_character_generator: RandomCharacterGenerator
    - __string_shuffler: StringShuffler
}

abstract class RandomCharacterGeneratorBase {
    + {abstract} generate_uppercase_character(): str
    + {abstract} generate_lowercase_character(): str
    + {abstract} generate_digit_character(): str
    + {abstract} generate_special_character(): str
    + {abstract} generate_allowed_character(): str
}

class RandomCharacterGenerator {
    - __uppercase_characters: str
    - __lowercase_characters: str
    - __digit_characters: str
    - __special_characters: str
    - __allowed_characters: str
}

abstract class StringShufflerBase {
    + {abstract} shuffle(characters: str): str
}

class StringShuffler {
}

ArgumentValidatorBase <|-- ArgumentValidator
ArgumentProcessorBase <|-- ArgumentProcessor
TerminalBase <|-- Terminal
PasswordGeneratorBase <|-- PasswordGenerator
RandomCharacterGeneratorBase <|-- RandomCharacterGenerator
StringShufflerBase <|-- StringShuffler
ProgramBase <|-- Program

Program *--l ArgumentProcessorBase

ArgumentProcessor *--l ArgumentValidatorBase
ArgumentProcessor *--d PasswordGeneratorBase
ArgumentProcessor *--r TerminalBase

PasswordGenerator *--l RandomCharacterGeneratorBase
PasswordGenerator *--r StringShufflerBase
@enduml